// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WishList .add(WishListItem) should add item 1`] = `
Object {
  "image": "new image",
  "name": "newName",
  "price": 23.45,
}
`;

exports[`WishList .add(object) should add item 1`] = `
Object {
  "image": "new image",
  "name": "newName",
  "price": 23.45,
}
`;

exports[`WishList .create() should returns expected items 1`] = `
Array [
  Object {
    "image": "image1",
    "name": "name1",
    "price": 1,
  },
  Object {
    "image": "image2",
    "name": "name2",
    "price": 2,
  },
  Object {
    "image": "image3",
    "name": "name3",
    "price": 3,
  },
]
`;

exports[`WishListItem .create() should return expected values 1`] = `
Object {
  "image": "https://images-na.ssl-images-amazon.com/images/I/51LmtX5KPAL._SX406_BO1,204,203,200_.jpg",
  "name": "Chronicles of Narnia Box Set - C.S. Lewis",
  "price": 28.83,
}
`;

exports[`WishListItem .create() without image should default to empty string for image 1`] = `
Object {
  "image": "",
  "name": "Chronicles of Narnia Box Set - C.S. Lewis",
  "price": 28.83,
}
`;
